# semiuniq

./: Cargo.toml  README.md  test.txt
.github/workflows/: publish-release.yml
src/: main.rs
